# cyton-arm-collect-database

./: CMakeLists.txt  README.md  cytonExampleGUIPlugin.cpp  cytonExampleGUIPlugin.h  cytonIncludes.h  exampleWidget.cpp  exampleWidget.h  jointControl.cpp  jointControl.h
arm_pose_generated_file/: ball_view_front_act.ecam  ball_view_front_pose.ecz  cytonExampleGUIPlugin.ecp
image_wall/: cyton.ecz  wall_move.ecam  wall_pose.ecz
